tests/type-errors/decl_no_asset_option.arl
archetype decl_no_asset_option

asset my_asset {
  id : string;
}

variable a : my_asset option = none

entry exec() {
  effect {
    require (true)
  }
}
